--- a/index.html
+++ b/index.html
@@ -39,8 +39,45 @@
 </section>
 
 <footer>
-    <p>📍 თბილისი | 📞 555-12-34-56</p>
+    <p>📍 თბილისი,ლუბლიანა 11/5ც | 📞 500055098 </p>
 </footer>
 
 </body>
+</html><!DOCTYPE html>
+<html lang="ka">
+<head>
+  <meta charset="UTF-8">
+  <title>ზოომაღაზია</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <header>
+    <h1>🐾 ზოომაღაზია</h1>
+    <p>ყველაფერი შენი შინაური ცხოველისთვის</p>
+  </header>
+
+  <section class="products">
+    <div class="card">
+      <h3>ძაღლის საკვები</h3>
+      <p>ფასი: 25₾</p>
+      <button>ყიდვა</button>
+    </div>
+
+    <div class="card">
+      <h3>კატის საკვები</h3>
+      <p>ფასი: 20₾</p>
+      <button>ყიდვა</button>
+    </div>
+
+    <div class="card">
+      <h3>სათამაშო</h3>
+      <p>ფასი: 10₾</p>
+      <button>ყიდვა</button>
+    </div>
+  </section>
+
+</body>
 </html>
+
+
