--- a/index.html
+++ b/index.html
@@ -78,6 +78,30 @@
   </section>
 
 </body>
-</html>
+</html><section class="products">
+  <h2>პროდუქტები</h2>
+
+  <div class="product-grid">
+    <div class="card">
+      <h3>ძაღლის საკვები</h3>
+      <p>მაღალი ხარისხის საკვები</p>
+      <span>25₾</span>
+    </div>
+
+    <div class="card">
+      <h3>კატის საკვები</h3>
+      <p>ბუნებრივი ინგრედიენტები</p>
+      <span>18₾</span>
+    </div>
+
+    <div class="card">
+      <h3>სათამაშო</h3>
+      <p>გამძლე და უსაფრთხო</p>
+      <span>10₾</span>
+    </div>
+  </div>
+</section>
+
+
 
 
