--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <section class="products">
     <div class="card">
-      <h3>ძაღლის საკვები</h3>
+      <h3>მონჟე ძაღლის </h3>
       <p>ფასი: 25₾</p>
       <button>ყიდვა</button>
     </div>
@@ -101,6 +101,7 @@
     </div>
   </div>
 </section>
+
 
 
 
